# f1thnth_obstacle_avoidance_MPCC

./: CMakeLists.txt  README.md  package.xml
Docker/: Dockerfile
config/: traj_selector_params.yaml
include/obstacle_avoidance_MPCC/: obstacle_avoidance_MPCC.hpp  obstacle_avoidance_MPCC_node.hpp  visibility_control.hpp
launch/: obstacle_avoidance_MPCC.launch.py  traj_selector_launch.py
src/: f1thnth_obstacle_avoidance_MPCC.cpp  obstacle_avoidance_MPCC.cpp  obstacle_avoidance_MPCC_node.cpp  traj_selector.cpp
test/: test_obstacle_avoidance_MPCC.cpp
utilities/: run_container_linux.sh  run_container_windows.sh
